--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -16,6 +16,25 @@
         <i class="fa-solid fa-quote-left"></i>
         <span id="text">Hello</span>
       </div>
+
+      <div class="quote-author">
+        "- "
+        <span id="author"> Author's name here.. </span>
+      </div>
+
+      <div class="buttons">
+        <a class="button" id="github" href="https://github.com/cmcneil7532">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          class="button"
+          id="linkedin"
+          href="https://www.linkedin.com/in/christian-mcneil-73310027/"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <button id="new-quote">New quote</button>
+      </div>
     </wrapper>
   </body>
 </html>
