--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -14,11 +14,11 @@
     <wrapper id="quote-box">
       <div class="quote-text">
         <i class="fa-solid fa-quote-left"></i>
-        <span id="text">Hello</span>
+        <span id="text">With great Responsibilty asdfakj akdfa lsdjf</span>
       </div>
 
       <div class="quote-author">
-        "- "
+        -
         <span id="author"> Author's name here.. </span>
       </div>
 
