HTML foundation and CSS done

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -11,30 +11,33 @@
     <title>Random Quote Generator</title>
   </head>
   <body>
-    <wrapper id="quote-box">
-      <div class="quote-text">
-        <i class="fa-solid fa-quote-left"></i>
-        <span id="text">With great Responsibilty asdfakj akdfa lsdjf</span>
-      </div>
+    <div id="wrapper">
+      <div id="quote-box">
+        <div class="quote-text">
+          <i class="fa-solid fa-quote-left"></i>
+          <span id="text">With great Responsibilty asdfakj akdfa lsdjf</span>
+        </div>
 
-      <div class="quote-author">
-        -
-        <span id="author"> Author's name here.. </span>
-      </div>
+        <div class="quote-author">
+          -
+          <span id="author"> Author's name here.. </span>
+        </div>
 
-      <div class="buttons">
-        <a class="button" id="github" href="https://github.com/cmcneil7532">
-          <i class="fa-brands fa-github"></i>
-        </a>
-        <a
-          class="button"
-          id="linkedin"
-          href="https://www.linkedin.com/in/christian-mcneil-73310027/"
-        >
-          <i class="fa-brands fa-linkedin"></i>
-        </a>
-        <button id="new-quote">New quote</button>
+        <div class="buttons">
+          <a class="button" id="github" href="https://github.com/cmcneil7532">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            class="button"
+            id="linkedin"
+            href="https://www.linkedin.com/in/christian-mcneil-73310027/"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <button class="button" id="new-quote">New quote</button>
+        </div>
       </div>
-    </wrapper>
+      <div class="footer">by Christian</div>
+    </div>
   </body>
 </html>
