--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UFT-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel=" stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/6ef182fedb.js"
@@ -17,9 +17,7 @@
           <i class="fa-solid fa-quote-left"></i>
           <span id="text">With great Responsibilty asdfakj akdfa lsdjf</span>
         </div>
-
         <div class="quote-author">
-          -
           <span id="author"> Author's name here.. </span>
         </div>
 
@@ -34,10 +32,13 @@
           >
             <i class="fa-brands fa-linkedin"></i>
           </a>
-          <button class="button" id="new-quote">New quote</button>
+          <button class="button" id="new-quote" onclick="newQuote()">
+            New quote
+          </button>
         </div>
       </div>
       <div class="footer">by Christian</div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
